src/test/test-models/bad/reserved/char16_t.stan
data {
  real char16_t;
}
model {
}
